[package]
name = "lox-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
lox-syntax = { path = "../lox-syntax" }
lox-runtime = { path = "../lox-runtime" }
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.77"

[profile.release]
opt-level = "s"